# free_range_zoo_1

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  clear_notebooks_util.sh  conf.py  evaluate.py  evaluate.sh  furo-2023.8.19-py3-none-any.whl  main.py  main_ams.py  pyproject.toml  read_pickle.py  requirements.txt  test.py  迭代.py
.history/: .gitignore_20250408131917  test_20250409140352.py  test_20250409140441.py  test_20250409140500.py  test_20250409140508.py  test_20250409140511.py  test_20250409140617.py  test_20250409140657.py
.history/free_range_zoo/: main_ams_20250408132232.py  main_ams_20250408150323.py  main_ams_20250408150325.py  main_ams_20250408150455.py  main_ams_20250408150502.py  main_ams_20250408150504.py  main_ams_20250408150538.py  main_ams_20250408150543.py  main_ams_20250408150556.py  main_ams_20250408150606.py  main_ams_20250408150613.py  main_ams_20250408150620.py  main_ams_20250408150622.py  main_ams_20250408150730.py  main_ams_20250408150735.py  main_ams_20250408150758.py  main_ams_20250408150800.py  main_ams_20250408151542.py  main_ams_20250408151558.py  main_ams_20250408151559.py  (+43 more)
docs/: README.md  pyproject.toml  setup.cfg
docs/free_range_zoo_docs/: __init__.py  gen_envs_docstrings.py  gen_envs_mds.py
docs/source/: conf.py  index.md
docs/source/api/: environments.md  logging.md
docs/source/code_examples/: usage_aec.py  usage_parallel.py
docs/source/environments/cybersecurity/: baselines.md  index.md  specification.md
docs/source/environments/rideshare/: baselines.md  index.md  specification.md
docs/source/environments/wildfire/: baselines.md  index.md  specification.md
docs/source/events/mosaei-2025/: environment_initialization.md  evaluation.md  index.md  quickstart.md
docs/source/introduction/: basic_usage.md  installation.md  quickstart.md
docs/tests/: test_build.py
experiments/: train.py
free_range_zoo/: =1.20  LLM_cache.py  average_results.csv  main.py  main1.py  main_ams.py  run1.sh  run_ugv.sh
outputs/: 0.csv
utils/: extract_task_code.py
(+2654 files in other folders)
