[project]
name = "free-range-zoo"
version = "0.1.22"
description = ""
authors = [
    { name = "C4 Patino", email = "cpatino2@huskers.unl.edu" },
    { name = "Daniel Redder", email = "daniel.redder@uga.edu" },
    { name = "Alireza Saleh Abadi", email = "asalehabadi2@huskers.unl.edu" }
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"

requires-python = "^3.12.0"
dependencies = [
    "free-range-rust (>=0.1.8,<0.2.0)",
    "gymnasium (>=1.0.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pettingzoo (>=1.24.3,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "supersuit (>=3.9.3,<4.0.0)",
    "tensordict (>=0.7.0,<0.8.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "xxhash (>=3.5.0,<4.0.0)",
]

[tool.poetry.group.oasys.dependencies]
free-range-zoo-docs = { path = "docs", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-complexity = 25

[tool.yapf]
COLUMN_LIMIT = 130
